kqed/src/objects/candidate__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirm_Password__c</fullName>
        <label>Confirm Password</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>The code of the country selected in the candidates address</description>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua &amp; Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_lkp__c</fullName>
        <description>Lookup to COuntry object for candidate address</description>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Candidates</relationshipLabel>
        <relationshipName>Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cover_Letter__c</fullName>
        <label>Cover Letter</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Employer__c</fullName>
        <label>Current Employer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_employee_of_WGBH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current employee of WGBH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currently_Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desired_Salary__c</fullName>
        <label>Desired Salary</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EEO_Class__c</fullName>
        <description>The EEO Class for Lawson.</description>
        <label>EEO Class</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEO_Diversity__c</fullName>
        <description>This is the Racial Group of the candidate</description>
        <label>EEO Diversity</label>
        <picklist>
            <picklistValues>
                <fullName>Hispanic or Latino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Indian or Alaskan Native (Not Hispanic or Latino)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian (Not Hispanic or Latino)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black or African American (Not Hispanic or Latino)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native Hawaiian or Other Pacific Islander (Not Hispanic or Latino)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White (Not Hispanic or Latino)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decline to Identify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>HS Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA/BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA/MS/MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ph.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Doc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ethnic_Group__c</fullName>
        <description>The ethnic grou pf the candidate</description>
        <label>Ethnic Group</label>
        <picklist>
            <picklistValues>
                <fullName>Hispanic/Latino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Hispanic/Latino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decline to Identify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <externalId>true</externalId>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decline to Identify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Handicapped__c</fullName>
        <label>Disability?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <externalId>true</externalId>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Candidates</relationshipLabel>
        <relationshipName>Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picture_Url__c</fullName>
        <label>Picture Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Previous_WGBH_employee_ID__c</fullName>
        <label>Previous WGBH employee ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previously_employed_at_WGBH__c</fullName>
        <label>Previously employed at WGBH</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recent_Experience__c</fullName>
        <inlineHelpText>Previous Experience</inlineHelpText>
        <label>Recent Experience</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recent_Salary__c</fullName>
        <label>Recent Salary</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Registration_Email__c</fullName>
        <label>Registration Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Resume__c</fullName>
        <label>Resume</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salary_Hired__c</fullName>
        <description>The yearly salary at which a candidate has been hired</description>
        <label>Salary Hired</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Security_Question__c</fullName>
        <label>Security Question</label>
        <picklist>
            <picklistValues>
                <fullName>What is your pets name?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>What is your mothers maiden name?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>What city were you born in?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In what city was your first job?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>What is the name of your favorite childhood friend?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In what city did you meet your spouse/significant other?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>What was your childhood nick name?</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sponsorship__c</fullName>
        <label>Will you require sponsorship to work</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <picklist>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Mariana Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_lkp__c</fullName>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Candidates</relationshipLabel>
        <relationshipName>Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Street_Address1__c</fullName>
        <label>Street Address1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address2__c</fullName>
        <label>Street Address2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Citizen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>US Citizen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veteran_information__c</fullName>
        <label>Veteran information</label>
        <picklist>
            <picklistValues>
                <fullName>Veteran - Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veteran - Recently Seperated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veteran - Armed Forces Service Medal Veteran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veteran - Other Protected Veteran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a Veteran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decline to identify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visa_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visa Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Years_Of_Experience__c</fullName>
        <label>Years Of Experience</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>about_us__c</fullName>
        <label>How did you hear about us</label>
        <picklist>
            <picklistValues>
                <fullName>Current WGBH employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former WGBH employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred by WGBH employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career website: Monster.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career website: Craigslist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career website: Indeed.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career website: Linked In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career website: Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intern/Campus recruiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>approved_to_work__c</fullName>
        <label>Are you approved to work in the USA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All_Candidates</fullName>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Education__c</columns>
        <columns>City__c</columns>
        <columns>State_lkp__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Candidates</label>
    </listViews>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <recordTypes>
        <fullName>candidate001</fullName>
        <active>true</active>
        <label>candidate001</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Fax_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(REGEX( Fax__c , &apos;^\\(?(\\d{3})\\)?[- ]?(\\d{3})[- ]?(\\d{4})$&apos;))</errorConditionFormula>
        <errorDisplayField>Fax__c</errorDisplayField>
        <errorMessage>Invalid fax number format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mobile_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(REGEX( Mobile__c , &apos;^\\(?(\\d{3})\\)?[- ]?(\\d{3})[- ]?(\\d{4})$&apos;))</errorConditionFormula>
        <errorDisplayField>Mobile__c</errorDisplayField>
        <errorMessage>Invalid mobile phone number format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_number</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( Phone__c , &apos;^\\(?(\\d{3})\\)?[- ]?(\\d{3})[- ]?(\\d{4})$&apos;))</errorConditionFormula>
        <errorDisplayField>Phone__c</errorDisplayField>
        <errorMessage>Invalid phone number format. Proper format: xxx-xxx-xxxx</errorMessage>
    </validationRules>
</CustomObject>